# adaptation.ap_samsung.system-plugin-common

./: .gitignore  Makefile.am  TODO  configure.ac
conf/systemd/: ignore-units
packaging/: system-plugin-common.manifest  system-plugin-common.spec
scripts/: change-booting-mode.sh  check-mount.sh  cleanup-storage.sh  tizen-boot.sh.in  tizen-fstrim-on-charge.sh
src/ghost/: ghost.c  ghost.conf.m4
src/shared/: conf-parser.c  conf-parser.h  dbus-common.h  fileio.c  fileio.h  macro.h  systemd.c  systemd.h  util.c  util.h
sysctl.d/: 50-tizen-default.conf.in
units/: check-mount.service  check-mount.service.m4  cleanup-storage.service  cleanup-storage.service.m4  cleanup-storage.timer  ghost.service  init-conf.service  init-conf.service.m4  remount-rootfs.service.m4  systemd-udevd-kill.service  systemd-udevd-kill.timer  tizen-fstrim-user.service  tizen-fstrim-user.service.m4  tizen-fstrim-user.timer.m4  tizen-generate-env.service  tizen-generate-env.service.m4  tizen-init-check.service.in  tizen-init-check.service.m4.in  tizen-init-done.service.in  tizen-init-done.service.m4.in  tizen-init.target  tizen-initial-boot-done.service.in  tizen-initial-boot-done.service.m4.in  tizen-journal-flush.service  tizen-journal-flush.service.m4  tizen-readahead-collect-stop.service  tizen-readahead-collect-stop.service.m4  tizen-readahead-collect.service.in  tizen-readahead-collect.service.m4.in  tizen-readahead-replay.service.in  tizen-readahead-replay.service.m4.in  tizen-runtime.target  tizen-system.target  wm_ready.service  wm_ready.service.m4
